# cvm

./: .gitignore  pyproject.toml
backend/: README.md  rename.sh  start-api.sh
backend/cvm/: api.py  cli.py  config.py  database.py  models.py  settings.toml
backend/cvm/api/: main.py
backend/cvm/api/internal/: admin.py
backend/cvm/api/routes/: cia_aberta.py
backend/cvm/core/: cia_aberta.py  downloader.py  uploader.py
backend/http/: CVM.postman_collection.json  requests.http
cvm/: cli.py  models.py  serializers.py  settings.toml
cvm/core/: cia_aberta.py  downloader.py  upload_postgres.py  uploader.py
docker/: docker-compose.yaml
frontend/: index.html
http/: CVM.postman_collection.json  requests.http
